# OCR-old_documents

./: .gitignore  OCR-old_documents.code-workspace  readme.md  requirements.txt
OSDOCR/: pyproject.toml
OSDOCR/OSDOCR/: OSDOcr.py  __init__.py  parse_args.py  pipeline.py  tempCodeRunnerFile.py
OSDOCR/OSDOCR/aux_utils/: box.py  consts.py  graph.py  misc.py  page_tree.py  parse_args.py
OSDOCR/OSDOCR/commands/gui/ocr_editor/: __init__.py
OSDOCR/OSDOCR/commands/output/articles/: __init__.py
OSDOCR/OSDOCR/commands/output/simple/: __init__.py
OSDOCR/OSDOCR/commands/posprocessing/clean_ocr/: __init__.py
OSDOCR/OSDOCR/commands/validation/: __init__.py
OSDOCR/OSDOCR/gui/: ocr_editor.py  osdocr_gui.py
OSDOCR/OSDOCR/gui/aux_utils/: utils.py
OSDOCR/OSDOCR/gui/layouts/: extra_layout.py  hocr_editor.py  main_layout.py  ocr_editor_layout.py
OSDOCR/OSDOCR/gui/methods/: methods.py
OSDOCR/OSDOCR/gui/ocr_editor/: configuration_gui.py  ocr_editor.py
OSDOCR/OSDOCR/gui/ocr_editor/layouts/: ocr_editor_layout.py
OSDOCR/OSDOCR/gui/osdocr_gui/: osdocr_gui.py
OSDOCR/OSDOCR/gui/osdocr_gui/layouts/: extra_layout.py  main_layout.py
OSDOCR/OSDOCR/gui/osdocr_gui/methods/: methods.py
OSDOCR/OSDOCR/ocr_engines/: engine_utils.py
OSDOCR/OSDOCR/ocr_tree_module/: information_extraction.py  ocr_tree.py  ocr_tree_analyser.py  ocr_tree_fix.py
OSDOCR/OSDOCR/output_module/: text.py
OSDOCR/OSDOCR/output_module/journal/: article.py
OSDOCR/OSDOCR/preprocessing/: image.py
OSDOCR/OSDOCR/validation/: calibrate.py
OSDOCR/src/: OSDOcr.py  targets.txt
OSDOCR/src/aux_utils/: box.py  misc.py
OSDOCR/src/gui/: osdocr_gui copy.py  osdocr_gui.py
OSDOCR/src/ocr_tree_module/: box.md  information_extraction.py  ocr_tree.py  ocr_tree_analyser.py  ocr_tree_fix.py
OSDOCR/tests/analyze_text/: test_columns.py  test_text_size.py
OSDOCR/tests/image/: test_rotation.py
OSDOCR/tests/reading_order/: test_reading_order.py
docs/OSDOcr/: .$pipeline_detalhada.drawio.bkp  .$pipeline_geral - horizontal.drawio.bkp  .$pipeline_geral.drawio.bkp  .$pipeline_high_level.drawio.bkp  MVC.drawio  OSDOcr_pipeline.drawio  arquitetura_geral.drawio  arquitetura_pipeline_high_level.drawio  arquitetura_pipeline_ocr.drawio  arquitetura_pipeline_output.drawio  arquitetura_pipeline_posprocess.drawio  arquitetura_pipeline_preprocess.drawio  arquitetura_pipeline_reduced.drawio  arquitetura_toolkit.drawio  extract_journal_workflow.drawio  pipeline_detalhada.drawio  pipeline_exemplo.drawio  pipeline_exemplo_opcoes.drawio  pipeline_geral - horizontal.drawio  pipeline_geral.drawio  pipeline_high_level.drawio
docs/box_module/: box_module.aux
investigacao/: papers.md  papers.txt
src/: OSDOcr.py  journal_tesseract.py  result.json  result.txt  result.xml  result_processed.json
(+89 files in other folders)
