[tool.poetry]
name = "OSDOCR"
version = "0.3.1.2"
description = "Toolkit for ocr of old structured documents"
authors = ["Gonçalo Afonso <brazafonso2001@gmail.com>"]
#readme = "README.md"
packages = [
    { include = "OSDOCR" }
]
include = [
    { path = "OSDOCR/consts/*", format = ["sdist", "wheel"] }
]

[tool.poetry.dependencies]
python = "^3.10.11"
opencv-python = "^4.9.0.80"
scipy = "*"
bs4 = "^0.0.1"
lxml = "*"
document_image_utils = "*"
h5py = "*"
huggingface-hub = "*"
jellyfish = "*"
matplotlib = "*"
numpy = "*"
pandas = "*"
pillow = "*"
PySimpleGui = "*"
pytesseract = "*"
scikit-learn = "*"
whittaker_eilers = "*"
networkx = "*"
pyperclip = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"

[tool.pytest.ini_options]
pythonpath = "OSDOCR"

[tool.poetry.scripts]
osdocr = "OSDOCR:main"
clean_ocr = "OSDOCR.commands.posprocessing.clean_ocr:main"
validate_ocr = "OSDOCR.commands.validation:main"
ocr_to_article = "OSDOCR.commands.output.articles:main"
ocr_to_simple = "OSDOCR.commands.output.simple:main"
ocr_editor = "OSDOCR.commands.gui.ocr_editor:main"